# tui-markup-renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
samples/tldr/: Cargo.toml
samples/tldr/assets/: layout.tml
samples/tldr/src/: main.rs
samples/tui-markup-sample/: .vimspector.json  Cargo.toml
samples/tui-markup-sample/assets/: layout.tml  layout1.tml  layout1_1.tml  layout1_2.tml  layout1_3.tml  layout1_4.tml  layout2.tml  simple_layout.tml  tabs.tml
samples/tui-markup-sample/src/: main.rs
src/: actions.rs  event_response.rs  generator.rs  lib.rs  markup_element.rs  markup_parser.rs  parser.rs  render_actions.rs  storage.rs  styles.rs  utils.rs
tests/: markup_parser_tests.rs
tests/assets/: bad_sample.tml  creation_sample.tml  real_sample.tml  sample_couple_blocks.tml  sample_nested_blocks.tml  sample_single_block.tml  sample_units.tml  sample_widgets_1.tml
