[package]
name = "tui-markup-renderer"
version = "0.1.0"
edition = "2021"

description = "Rust library to use TUI and markup to build UI terminal interfaces."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ogranada/tui-markup"
repository = "https://github.com/ogranada/tui-markup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.4"
tui = "0.19.0"
