[package]
name = "tui-markup-sample"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tui = "0.19.0"
tui-markup-renderer = { path = "../../../tui-markup-renderer/" }
crossterm = "0.25.0"
clap = { version = "4.3.5", features = ["derive"] }
env_logger = "0.10.0"
